refactor(admin): 管理端端口查询化与单实现类化