@@ -1,21 +1,18 @@
 package com.cartethyia.easyorange.admin.service;
 
-import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
-import com.baomidou.mybatisplus.extension.toolkit.ChainWrappers;
 import com.cartethyia.easyorange.admin.adapter.inbound.web.dto.request.AdminUserQueryRequest;
 import com.cartethyia.easyorange.admin.adapter.inbound.web.dto.request.UpdateStatusRequest;
 import com.cartethyia.easyorange.admin.adapter.inbound.web.dto.response.AdminUserResponse;
+import com.cartethyia.easyorange.admin.domain.port.AdminUserQueryPort;
+import com.cartethyia.easyorange.admin.domain.port.AdminUserQueryPort.UserDetail;
+import com.cartethyia.easyorange.admin.domain.port.AdminUserQueryPort.UserQueryCondition;
+import com.cartethyia.easyorange.admin.domain.port.AdminUserQueryPort.UserQueryResult;
 import com.cartethyia.easyorange.common.constant.CommonConstant;
 import com.cartethyia.easyorange.common.exception.BusinessException;
 import com.cartethyia.easyorange.common.result.PageResult;
-import com.cartethyia.easyorange.user.adapter.outbound.persistence.UserDO;
-import com.cartethyia.easyorange.user.adapter.outbound.persistence.UserMapper;
-import com.cartethyia.easyorange.user.domain.enums.UserStatus;
-import com.cartethyia.easyorange.user.domain.enums.UserType;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -27,104 +24,81 @@ public class AdminUserService {
 
     private static final DateTimeFormatter DATE_FORMATTER = DateTimeFormatter.ofPattern(CommonConstant.DATETIME_FORMAT);
 
-    private final UserMapper userMapper;
+    private final AdminUserQueryPort adminUserQueryPort;
 
     public PageResult<AdminUserResponse> listUsers(AdminUserQueryRequest request) {
         int pageNum = request.getPageNum() != null ? request.getPageNum() : 1;
         int pageSize = request.getPageSize() != null ? request.getPageSize() : 20;
 
-        var wrapper = ChainWrappers.lambdaQueryChain(userMapper).eq(UserDO::getDelFlag, 0);
-
-        if (StringUtils.hasText(request.getKeyword())) {
-            wrapper.and(w -> w.like(UserDO::getUsername, request.getKeyword())
-                    .or()
-                    .like(UserDO::getNickName, request.getKeyword())
-                    .or()
-                    .like(UserDO::getEmail, request.getKeyword())
-                    .or()
-                    .like(UserDO::getPhone, request.getKeyword()));
-        }
-
-        if (StringUtils.hasText(request.getUserType())) {
-            wrapper.eq(UserDO::getUserType, UserType.fromCode(request.getUserType()));
-        }
-
-        if (StringUtils.hasText(request.getStatus())) {
-            UserStatus status = UserStatus.values()[Integer.parseInt(request.getStatus())];
-            wrapper.eq(UserDO::getStatus, status);
-        }
-
-        if (StringUtils.hasText(request.getStartTime())) {
-            try {
-                LocalDateTime startTime = LocalDateTime.parse(request.getStartTime() + " 00:00:00", DATE_FORMATTER);
-                wrapper.ge(UserDO::getCreateTime, startTime);
-            } catch (Exception ignored) {
-            }
-        }
-
-        if (StringUtils.hasText(request.getEndTime())) {
-            try {
-                LocalDateTime endTime = LocalDateTime.parse(request.getEndTime() + " 23:59:59", DATE_FORMATTER);
-                wrapper.le(UserDO::getCreateTime, endTime);
-            } catch (Exception ignored) {
-            }
-        }
-
-        wrapper.orderByDesc(UserDO::getCreateTime);
-
-        Page<UserDO> page = wrapper.page(new Page<>(pageNum, pageSize));
+        UserQueryResult result = adminUserQueryPort.queryUsers(new UserQueryCondition(
+                request.getKeyword(),
+                request.getUserType(),
+                request.getStatus(),
+                parseStartTime(request.getStartTime()),
+                parseEndTime(request.getEndTime()),
+                pageNum,
+                pageSize));
 
         List<AdminUserResponse> records =
-                page.getRecords().stream().map(this::toAdminUserResponse).collect(Collectors.toList());
+                result.records().stream().map(this::toAdminUserResponse).toList();
 
-        return PageResult.of(records, page.getTotal(), pageNum, pageSize);
+        return PageResult.of(records, result.total(), pageNum, pageSize);
     }
 
     @Transactional(readOnly = true)
     public AdminUserResponse getUserDetail(String id) {
-        UserDO entity = userMapper.selectById(id);
-        if (entity == null || entity.getDelFlag() != 0) {
+        UserDetail user = adminUserQueryPort.getUserDetail(id);
+        if (user == null) {
             throw BusinessException.of("用户不存在");
         }
-        return toAdminUserResponse(entity);
+        return toAdminUserResponse(user);
     }
 
     @Transactional(rollbackFor = Exception.class)
     public void updateUserStatus(String id, UpdateStatusRequest request) {
-        UserDO entity = userMapper.selectById(id);
-        if (entity == null || entity.getDelFlag() != 0) {
-            throw BusinessException.of("用户不存在");
-        }
-
-        UserStatus newStatus;
-        try {
-            newStatus = UserStatus.fromCode(request.getStatus());
-        } catch (IllegalArgumentException ex) {
-            throw BusinessException.of("无效的用户状态");
-        }
-        entity.setStatus(newStatus);
-        userMapper.updateById(entity);
+        adminUserQueryPort.updateUserStatus(id, request.getStatus());
     }
 
-    private AdminUserResponse toAdminUserResponse(UserDO entity) {
+    private LocalDateTime parseStartTime(String startTime) {
+        if (!StringUtils.hasText(startTime)) {
+            return null;
+        }
+        try {
+            return LocalDateTime.parse(startTime + " 00:00:00", DATE_FORMATTER);
+        } catch (Exception ignored) {
+            return null;
+        }
+    }
+
+    private LocalDateTime parseEndTime(String endTime) {
+        if (!StringUtils.hasText(endTime)) {
+            return null;
+        }
+        try {
+            return LocalDateTime.parse(endTime + " 23:59:59", DATE_FORMATTER);
+        } catch (Exception ignored) {
+            return null;
+        }
+    }
+
+    private AdminUserResponse toAdminUserResponse(UserDetail user) {
         return AdminUserResponse.builder()
-                .userId(entity.getId())
-                .username(entity.getUsername())
-                .nickname(entity.getNickName())
-                .avatar(entity.getAvatar())
-                .email(entity.getEmail())
-                .phone(entity.getPhone())
-                .studentId(entity.getStudentId())
-                .realName(entity.getRealName())
-                .userType(entity.getUserType() != null ? entity.getUserType().getCode() : null)
-                .userTypeDesc(
-                        entity.getUserType() != null ? entity.getUserType().getDescription() : null)
-                .status(entity.getStatus() != null ? entity.getStatus().getCode() : null)
-                .statusDesc(entity.getStatus() != null ? entity.getStatus().getDescription() : null)
-                .loginIp(entity.getLoginIp())
-                .loginDate(entity.getLoginDate())
-                .createTime(entity.getCreateTime())
-                .updateTime(entity.getUpdateTime())
+                .userId(user.id())
+                .username(user.username())
+                .nickname(user.nickName())
+                .avatar(user.avatar())
+                .email(user.email())
+                .phone(user.phone())
+                .studentId(user.studentId())
+                .realName(user.realName())
+                .userType(user.userType())
+                .userTypeDesc(user.userTypeDesc())
+                .status(user.status())
+                .statusDesc(user.statusDesc())
+                .loginIp(user.loginIp())
+                .loginDate(user.loginDate())
+                .createTime(user.createTime())
+                .updateTime(user.updateTime())
                 .build();
     }
 }
